--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "private": true,
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "chalk": "^2.4.2",
+    "check-types": "^9.0.1",
     "q-i": "^2.0.1",
-    "winston": "^2.4.4"
+    "serialised-error": "^1.1.3"
   },
   "devDependencies": {
-    "check-types": "^8.0.1",
     "jest": "^24.5.0",
     "test-console": "^1.1.0"
   }
